Fix some visual and interractive bugs
- bug: invisible div was covering buttons which prevented clicks
  fix: div size was reduced to fit exactly the visible parts

- bug: in mobile view navbar, user used to have to click the word itself
  fix: now the button will work if user presses anywhere in link's row

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,9 @@
 
 		li:not(:last-child)::after {
 			content: '';
-			height: 100%;
+			height: 1px;
 			position: absolute;
-			top: 10px;
+			top: 49px;
 			left: -50px;
 			right: -50px;
 			border-bottom: rgb(60, 63, 74) 1px solid;
